k8s/kite.ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kite-ingress
  annotations:
    kite.cyphers.dev/group: Sites
    kite.cyphers.dev/name: Kite
    kite.cyphers.dev/tags: production,Kite
spec:
  entryPoints:
    - websecure
  tls:
    secretName: kite-cyphers-dev-cert
  routes:
    - match: Host(`kite.cyphers.dev`)
      kind: Rule
      services:
        - kind: Service
          name: kite
          namespace: kite
          port: 4230
